--- a/lang/en.txt
+++ b/lang/en.txt
@@ -651,7 +651,7 @@ thou makest use of them.#
 408 Unsustaining spell %s.#
 409 You fumble the spell and it fizzles!#
 410 Cannot cast spells while swimming!#
-411 Wow! You feel restored.#
+411 Your body feels cleansed!#
 412 A map coalesces in your mind!#
 413 DEPRECATED_SPELL_NAME#
 414 DEPRECATED_SPELL_NAME#
@@ -1190,7 +1190,7 @@ Thank you!#
 760 This tastes like fruit juice.#
 761 Yecch! This tastes like poison.#
 762 You feel very confused!#
-763 Wow! You feel restored.#
+763 Your body feels cleansed!#
 764 You consume a tin of
  %s.#
 765 You can't see a thing!#
@@ -6393,5 +6393,7 @@ for accessory to violence!#
 4309 shrine#
 4310 ladder#
 4311 portal#
+4312 The potion had no effect.#
+4313 Your allies feel cleansed!#
 
 4399 end#
