* gyrobot improve return & land - messages if unable to find a suitable non-pit locaiton to land * gyrobot use own return pathing function - sort by distance to destination not the gyro

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -6398,5 +6398,6 @@ for accessory to violence!#
 4314 Skip to start/end#
 4315 Page Up/Down#
 4316 Scroll Up/Down#
+4317 Your %s failed to detect a suitable landing spot.#
 
 4399 end#
